--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   camera: ^0.11.2+1
   url_launcher: ^6.3.2
+  flutter_riverpod: ^3.0.3
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
+  geolocator: ^14.0.2
+  dio: ^5.9.0
+  freezed_annotation: ^3.1.0
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
