--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dio: ^5.9.0
   freezed_annotation: ^3.1.0
   permission_handler: ^12.0.1
+  scratcher: ^2.6.0
 
 dev_dependencies:
   flutter_test:
