--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   permission_handler: ^12.0.1
   scratcher: ^2.6.0
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_test:
